fix: horizontal scroll

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
     margin: auto;
     text-align: justify;
     max-width: 1024px;
-    min-width: 600px;
   }
   hr {
     width: 100%;
